test/preprocessor/valid/multiline.glsl
#define A(x) x + \
             x

int i = A(1);
