test/preprocessor/invalid/missing-args.glsl
#define A(x) x

int i = A;
